<resources>
    <string name="author_name">Yet Zio</string>
    <string name="app_name">yetCalc</string>
    <string name="VERSION_NUM">1.1.3</string>
    <string name="app_descrp">Yet another calculator by Yet Zio</string>
    <string name="ghbtext">View on GitHub</string>
    <string name="app_details">Free and open source software\nLicensed under the BSD-3-Clause license.</string>
    <string name="licensesText">Open source licenses</string>
    <string name="ac_buttontext">AC</string>
    <string name="backspacebt_text">\u232b</string>
    <string name="percent_bttext">%</string>
    <string name="history_name">History</string>
    <string name="theme_opt">Select theme</string>
    <string name="feedback">Send feedback</string>
    <string name="about">About</string>
    <string name="pi_symbol">𝝅</string>
    <string name="pi_text">pi</string>
    <string name="numberseven">7</string>
    <string name="numbereight">8</string>
    <string name="numbernine">9</string>
    <string name="leftbracket">(</string>
    <string name="rightbracket">)</string>
    <string name="powerbutton">xʸ</string>
    <string name="power_text">^</string>
    <string name="dividetext">÷</string>
    <string name="mulop">×</string>
    <string name="sqroot">√</string>
    <string name="sqrootval">^(1/2)</string>
    <string name="numberfour">4</string>
    <string name="numberfive">5</string>
    <string name="numbersix">6</string>
    <string name="minusop">-</string>
    <string name="numberone">1</string>
    <string name="numbertwo">2</string>
    <string name="numberthree">3</string>
    <string name="plusop">+</string>
    <string name="numberzero">𝟬</string>
    <string name="point_text">.</string>
    <string name="equalop">=</string>
    <string name="radiantext">RAD</string>
    <string name="secondmodetext">2nd</string>
    <string name="factorialtext">!</string>
    <string name="degconvtext">DEG(θ)</string>
    <string name="radconvtext">RAD(θ)</string>
    <string name="sintext">sin</string>
    <string name="costext">cos</string>
    <string name="tantext">tan</string>
    <string name="eulersnumber">e</string>
    <string name="naturallogtext">ln</string>
    <string name="commonlogtext">log</string>
    <string name="divide_expr">/</string>
    <string name="mul_expr">*</string>
    <string name="zero_text">0</string>
    <string name="text_res">textres</string>
    <string name="mode_text">calcmode</string>
    <string name="angle_mode_text">anglemode</string>
    <string name="squaretext">x\u00B2</string>
    <string name="cosectext">csc</string>
    <string name="sectext">sec</string>
    <string name="cottext">cot</string>
    <string name="eraisedtext">e\u02E3</string>
    <string name="tenraisedtext">10\u02E3</string>
    <string name="square_func">^2</string>
    <string name="rad_func">rad(</string>
    <string name="deg_func">deg(</string>
    <string name="sine_func">sin(</string>
    <string name="cosine_func">cos(</string>
    <string name="cosec_func">csc(</string>
    <string name="sec_func">sec(</string>
    <string name="tan_func">tan(</string>
    <string name="cot_func">cot(</string>
    <string name="eraised_func">e^</string>
    <string name="naturallog_func">ln(</string>
    <string name="commonlog_func">log10(</string>
    <string name="tenraised_func">10^</string>
    <string name="mx_parser_init">mxparse</string>
    <string name="eulermascheroni">γ</string>
    <string name="eulermascheroni_text">[gam]</string>
    <string name="degreetext">DEG</string>
    <string name="modulustext">|x|</string>
    <string name="invsintext">sin⁻¹</string>
    <string name="invcostext">cos⁻¹</string>
    <string name="invtantext">tan⁻¹</string>
    <string name="invcosectext">csc⁻¹</string>
    <string name="invsectext">sec⁻¹</string>
    <string name="invcottext">cot⁻¹</string>
    <string name="abs_func">abs(</string>
    <string name="invsin_func">arcsin(</string>
    <string name="invcos_func">arccos(</string>
    <string name="invtan_func">arctan(</string>
    <string name="invcsc_func">arccsc(</string>
    <string name="invsec_func">arcsec(</string>
    <string name="invcot_func">arccot(</string>
    <string name="signum_text">sgn</string>
    <string name="sinhtext">sinh</string>
    <string name="coshtext">cosh</string>
    <string name="tanhtext">tanh</string>
    <string name="cschtext">csch</string>
    <string name="sechtext">sech</string>
    <string name="cothtext">coth</string>
    <string name="signum_func">sgn(</string>
    <string name="sinh_func">sinh(</string>
    <string name="cosh_func">cosh(</string>
    <string name="tanh_func">tanh(</string>
    <string name="csch_func">csch(</string>
    <string name="sech_func">sech(</string>
    <string name="coth_func">coth(</string>
    <string name="sinc_text">sinc</string>
    <string name="invsinhtext">sinh⁻¹</string>
    <string name="invcoshtext">cosh⁻¹</string>
    <string name="invtanhtext">tanh⁻¹</string>
    <string name="invcosechtext">csch⁻¹</string>
    <string name="invsechtext">sech⁻¹</string>
    <string name="invcothtext">coth⁻¹</string>
    <string name="sinc_func">sinc(</string>
    <string name="invsinh_func">arcsinh(</string>
    <string name="invcosh_func">arccosh(</string>
    <string name="invtanh_func">arctanh(</string>
    <string name="invcsch_func">arccsch(</string>
    <string name="invsech_func">arcsech(</string>
    <string name="invcoth_func">arccoth(</string>
    <string name="gradtext">\u0020grad(θ)\u0020</string>
    <string name="grad_func">grad(</string>
    <string name="goldenratio">ϕ</string>
    <string name="goldenratio_text">[phi]</string>
    <string name="ncr_text">nCr</string>
    <string name="plancksconst">h</string>
    <string name="speedoflight">c</string>
    <string name="parabolicconst">P</string>
    <string name="boltzmannconst">k</string>
    <string name="integraltext">∫</string>
    <string name="derivativetext">∂</string>
    <string name="leftdertext">∂-</string>
    <string name="rightdertext">∂+</string>
    <string name="nthdertext">∂n</string>
    <string name="fwd_difftext">∆</string>
    <string name="npr_text">nPr</string>
    <string name="viswanathconst">K</string>
    <string name="backdifftext">∇</string>
    <string name="eqsolvtext">sol</string>
    <string name="stirlingnumonetext">Stirl1</string>
    <string name="strlingnumtwotext">Stirl2</string>
    <string name="berntext">Bern</string>
    <string name="worptext">Worp</string>
    <string name="kdelta_text">KDelta</string>
    <string name="plasticconst">ρ</string>
    <string name="sigmatext">∑</string>
    <string name="prodtext">∏</string>
    <string name="avgtext">avg</string>
    <string name="varitext">vari</string>
    <string name="stditext">stdi</string>
    <string name="meantext">mean</string>
    <string name="npr_func">nPr(n, r)</string>
    <string name="boltzmannconstnum">1.380648509796223E-23</string>
    <string name="ncr_func">nCr(n,r)</string>
    <string name="kdelta_func">KDelta(i, j)</string>
    <string name="integralfunc">int(expr, arg, from, to)</string>
    <string name="backward_difffunc"><![CDATA[difb(expr, arg, <delta>)]]></string>
    <string name="sigma_func"><![CDATA[sum(i, from, to, expr, <by>)]]></string>
    <string name="derfunc"><![CDATA[der(expr, arg, <point>)]]></string>
    <string name="eqsolvefunc">solve(expr, arg, from, to)</string>
    <string name="prod_func"><![CDATA[prod(i, from, to, expr, <by>)]]></string>
    <string name="stirlingnumfunc">Stirl1(n, k)</string>
    <string name="avg_func"><![CDATA[avg(i, from, to, expr, <by>)]]></string>
    <string name="nderfunc">dern(expr, n, arg)</string>
    <string name="bernfunc">Bern(m,n)</string>
    <string name="vari_func"><![CDATA[vari(i, from, to, expr, <by>)]]></string>
    <string name="fwd_func"><![CDATA[diff(expr, arg, <delta>)]]></string>
    <string name="worpfunc">Worp(n, k)</string>
    <string name="stdi_func"><![CDATA[stdi(i, from, to, expr, <by>)]]></string>
    <string name="leftderfunc"><![CDATA[der-(expr, arg, <point>)]]></string>
    <string name="rightderfunc"><![CDATA[der+(expr, arg, <point>)]]></string>
    <string name="stirlingnum2func">Stirl2(n, k)</string>
    <string name="mean_func">mean(a1, …, an)</string>
    <string name="parabolicconstant">[P2]</string>
    <string name="lightspeed">2.99792458E8</string>
    <string name="plancksconstant">[hP]</string>
    <string name="viswanathconstant">[K.]</string>
    <string name="plasticconstant">[PN]</string>
    <string name="commachar">,</string>
    <string name="spacetext">space</string>
    <string name="spacechar">" "</string>
    <string name="alphabets">a,b,c,d,e,f,g,h,i,j,k,l,m,n,o,p,q,r,s,t,u,v,w,x,y,z,A,B,C,D,E,F,G,H,I,J,K,L,M,N,O,P,Q,R,S,T,U,V,W,X,Y,Z</string>
    <string name="specialsym">=,θ,α,β</string>
    <string name="deftext">x</string>
    <string name="drop_downarr">▼</string>
    <string name="modulotext">#(mod)</string>
    <string name="cuberoottext">³√</string>
    <string name="cuberootval">^(1/3)</string>
    <string name="fourthroottext">⁴√</string>
    <string name="fourthrootval">^(1/4)</string>
    <string name="powertower">^^</string>
    <string name="moduloop">#</string>
    <string-array name="calcmode_array">
        <item>1ST</item>
        <item>2ND</item>
        <item>3RD</item>
        <item>4TH</item>
        <item>5TH</item>
        <item>6TH</item>
        <item>7TH</item>
        <item>8TH</item>
        <item>9TH</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="historybartext">History</string>
    <string name="settingsmenu">Settings</string>
    <string name="helpmenu">Help</string>
    <string name="currency_convertertitle">\nCurrency</string>
    <string name="converter">Unit Converter</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="amount">Amount</string>
    <string name="update_currency_rates">Update currency rates</string>
    <string name="result">Result</string>
    <string name="date">Date:</string>
    <string name="datehint">YYYY-MM-DD</string>
    <string name="datecurrhint">If you want to convert based on historical exchange rate data, specify a date below.\n<![CDATA[ <a href="https://data.jsdelivr.com/v1/package/npm/@fawazahmed0/currency-api">Possible dates</a> listed in tags.]]></string>
    <string name="nointInfoText">Currency conversion requires an Internet connection.</string>
    <string name="nointTitle">No Internet Connection</string>
    <string name="try_again">Try Again</string>
    <string name="lshstr"><![CDATA[<<]]></string>
    <string name="rshstr"><![CDATA[>>]]></string>
    <string name="ANDstr">AND</string>
    <string name="ORstr">OR</string>
    <string name="NOTstr">NOT</string>
    <string name="NANDstr">NAND</string>
    <string name="NORstr">NOR</string>
    <string name="XORstr">XOR</string>
    <string name="LSHstr">Lsh</string>
    <string name="RSHstr">Rsh</string>
    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="cl">CL</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="numberdouble0">00</string>
    <string name="hexStr">Hex</string>
    <string name="decstr">Dec</string>
    <string name="octstr">OCT</string>
    <string name="binstr">BIN</string>
    <string name="difference">Difference</string>
    <string name="add">Add</string>
    <string name="subtract">Subtract</string>
    <string name="datetext">Date</string>
    <string name="erf">erf</string>
    <string name="erfc">erfc</string>
    <string name="erfInv">erf⁻¹</string>
    <string name="erfcInv">erfc⁻¹</string>
    <string name="gamma">Γ</string>
    <string name="sgngamma">sgnΓ</string>
    <string name="loggamma">lnΓ</string>
    <string name="digamma">ψ</string>
    <string name="gamma_func">Gamma(</string>
</resources>