<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/consMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include
        android:id="@+id/app_bar"
        layout="@layout/app_bar">
    </include>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="133dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearlayout4"
        app:layout_constraintTop_toBottomOf="@+id/app_bar"
        app:layout_constraintVertical_bias="0.093"
        tools:layout_editor_absoluteX="0dp">

        <TextView
            android:id="@+id/textresult"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text=""
            android:textAlignment="textEnd"
            android:paddingEnd="5dp"
            style="@style/yetCalcTVDarkRes"
            android:textSize="19sp"
            tools:ignore="RtlSymmetry" />

        <yetzio.yetcalc.widget.CalcText
            android:id="@+id/textexpression"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text=""
            android:textAlignment="textEnd"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:inputType="textNoSuggestions"
            android:textCursorDrawable="@null"
            style="@style/yetCalcTVDark"
            android:textSize="55sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearlayout5"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
        app:layout_constraintVertical_bias="0.026"
        tools:layout_editor_absoluteX="0dp">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

        <Button
            android:id="@+id/numberseven"
            android:layout_width="20dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/numberseven"
            style="@style/yetCalcNumberButton"
            android:stateListAnimator="@null"
            android:textSize="28sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

        <Button
            android:id="@+id/numbereight"
            android:layout_width="20dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/numbereight"
            style="@style/yetCalcNumberButton"
            android:stateListAnimator="@null"
            android:textSize="28sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

        <Button
            android:id="@+id/numbernine"
            android:layout_width="20dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/numbernine"
            style="@style/yetCalcNumberButton"
            android:stateListAnimator="@null"
            android:textSize="28sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

        <Button
            android:id="@+id/mulop"
            android:layout_width="20dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/mulop"
            style="@style/yetCalcOPButton"
            android:stateListAnimator="@null"
            android:textSize="32sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout5"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginTop="8dp"

        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearlayout6"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout2"
        tools:layout_editor_absoluteX="0dp">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

        <Button
            android:id="@+id/numberfour"
            android:layout_width="20dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/numberfour"
            style="@style/yetCalcNumberButton"
            android:stateListAnimator="@null"
            android:textSize="28sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

        <Button
            android:id="@+id/numberfive"
            android:layout_width="20dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/numberfive"
            style="@style/yetCalcNumberButton"
            android:stateListAnimator="@null"
            android:textSize="28sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

        <Button
            android:id="@+id/numbersix"
            android:layout_width="20dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/numbersix"
            style="@style/yetCalcNumberButton"
            android:stateListAnimator="@null"
            android:textSize="28sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

        <Button
            android:id="@+id/minusop"
            android:layout_width="20dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/minusop"
            style="@style/yetCalcOPButton"
            android:stateListAnimator="@null"
            android:textSize="32sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout6"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearlayout7"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout5"
        tools:layout_editor_absoluteX="0dp">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

        <Button
            android:id="@+id/numberone"
            android:layout_width="20dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/numberone"
            style="@style/yetCalcNumberButton"
            android:stateListAnimator="@null"
            android:textSize="28sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

        <Button
            android:id="@+id/numbertwo"
            android:layout_width="20dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/numbertwo"
            style="@style/yetCalcNumberButton"
            android:stateListAnimator="@null"
            android:textSize="28sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

        <Button
            android:id="@+id/numberthree"
            android:layout_width="20dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/numberthree"
            style="@style/yetCalcNumberButton"
            android:stateListAnimator="@null"
            android:textSize="28sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

        <Button
            android:id="@+id/plusop"
            android:layout_width="20dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/plusop"
            style="@style/yetCalcOPButton"
            android:stateListAnimator="@null"
            android:textSize="32sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout7"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout6"
        app:layout_constraintVertical_bias="0.062"
        tools:layout_editor_absoluteX="0dp">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

        <Button
            android:id="@+id/numberzero"
            android:layout_width="20dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/numberzero"
            style="@style/yetCalcNumberButton"
            android:stateListAnimator="@null"
            android:textSize="28sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

        <Button
            android:id="@+id/pointbutton"
            android:layout_width="20dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/point_text"
            style="@style/yetCalcNumberButton"
            android:stateListAnimator="@null"
            android:textSize="28sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

        <Button
            android:id="@+id/backspacebutton"
            android:layout_width="20dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/backspacebt_text"
            style="@style/yetCalcNumberButton"
            android:stateListAnimator="@null"
            android:textSize="28sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

        <Button
            android:id="@+id/equalop"
            android:layout_width="20dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/equalop"
            style="@style/yetCalcEqualButton"
            android:stateListAnimator="@null"
            android:textSize="32sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="78dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearlayout2"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout4"
        app:layout_constraintVertical_bias="0.181"
        tools:layout_editor_absoluteX="0dp">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

        <Button
            android:id="@+id/acbutton"
            android:layout_width="20dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/ac_buttontext"
            style="@style/yetCalcACButton"
            android:stateListAnimator="@null"
            android:textSize="28sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

        <Button
            android:id="@+id/powerbutton"
            android:layout_width="20dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/powerbutton"
            android:textAllCaps="false"
            style="@style/yetCalcOPButton"
            android:stateListAnimator="@null"
            android:textSize="32sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

        <Button
            android:id="@+id/percentbutton"
            android:layout_width="20dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/percent_bttext"
            style="@style/yetCalcOPButton"
            android:stateListAnimator="@null"
            android:textSize="32sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

        <Button
            android:id="@+id/divideop"
            android:layout_width="20dp"
            android:layout_height="75dp"
            android:layout_weight="1"
            android:text="@string/dividetext"
            style="@style/yetCalcOPButton"
            android:stateListAnimator="@null"
            android:textSize="32sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:layout_editor_absoluteX="44dp">

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

        <Button
            android:id="@+id/sqrtbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sqroot"
            style="@style/yetCalcBorderlessButtons"
            android:textSize="26sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

        <Button
            android:id="@+id/pibutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pi_symbol"
            style="@style/yetCalcBorderlessButtons"
            android:textSize="26sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

        <Button
            android:id="@+id/leftbracbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/leftbracket"
            style="@style/yetCalcBorderlessButtons"
            android:textSize="26sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="0.2" />

        <Button
            android:id="@+id/rightbracbutton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/rightbracket"
            style="@style/yetCalcBorderlessButtons"
            android:textSize="26sp" />

        <ImageButton
            android:id="@+id/histOthBt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:textSize="26sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>