<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.AboutActivity">

    <include
        android:id="@+id/about_app_bar"
        layout="@layout/about_appbar"
        android:layout_height="?android:actionBarSize"
        android:layout_width="match_parent"></include>

    <LinearLayout
        app:layout_constraintTop_toBottomOf="@+id/about_app_bar"
        android:id="@+id/calcDescText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:src="@mipmap/ic_launcher_foreground" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@color/greyish" />

        <TextView
            android:layout_marginTop="10sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/VERSION_NUM"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textColor="@color/greyish" />

        <TextView
            android:layout_marginTop="50sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_details"
            android:textSize="16sp"
            android:layout_gravity="center"
            android:fontFamily="serif" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/githubLyt"
        app:layout_constraintBottom_toTopOf="@id/appBottomText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_marginBottom="20sp">

        <ImageView
            android:id="@+id/githubIV"
            android:layout_width="30sp"
            android:layout_height="30sp"
            style="@style/ghbImgSrcDark" />

        <TextView
            android:id="@+id/githubTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5sp"
            style="@style/AboutTextDark"
            android:text="@string/ghbtext" />

    </LinearLayout>

    <TextView
        android:id="@+id/appBottomText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_descrp"
        android:textSize="16sp"
        android:textColor="@color/greyish"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="25sp"
        android:fontFamily="serif"/>

</androidx.constraintlayout.widget.ConstraintLayout>